# manim-interactive

./: LICENSE  README.md  pyproject.toml  testbed.py
src/manim_interactive/: __init__.py
